# MyProject

./: CMakeLists.txt  README.txt
.github/workflows/: linux-build.yml
include/: project.hpp
src/: main.cpp
